# Tetron

./: Cargo.toml  README.md
src/: bot.rs  config.rs  evaluator.rs  field.rs  gen_moves.rs  lib.rs  mac.rs  mov.rs  solve.rs  state.rs
