[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[package]
name = "tetron"
version = "0.1.0"
edition = "2021"

[features]
default = ["bench"]
bench = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["lib"]

[dependencies]
# == USED FOR WASM DEBUGGING / LOGGING == 
# wasm-bindgen = "0.2.84"
# web-sys = {version="0.3.61", features=["console"]}
rayon = "1.6"
